--- a/public/less/admin.less
+++ b/public/less/admin.less
@@ -20,12 +20,11 @@ html /deep/ paper-dropdown::shadow #scroller {
   padding: 0px;
 }
 
-#title-header {
-  .title    { margin-left: 120px; }
-  .subtitle { margin-left: 38px; }
-  paper-fab {
-    margin-left     :20px;
-    margin-top      :60px;
+#contents {
+  paper-fab#add-post {
+    position:fixed;
+    right: 25px;
+    bottom:25px;
     background-color:@accentColor;
   }
 }
