new post 화면 구성중

--- a/app/views/topbar.ejs
+++ b/app/views/topbar.ejs
@@ -29,7 +29,7 @@
             <paper-item noink>
               <paper-button ng-click="logout('<%- logoutUrl %>')"
                 raised class="submit primary">
-                Logout&nbsp;<core-icon="exit-to-app"></core-icon>
+                Logout&nbsp;<core-icon icon="exit-to-app"></core-icon>
               </paper-button>
             </paper-item>
           </core-menu>
@@ -44,7 +44,7 @@
   <% if(username) { %>
     <div class="bottom fit" horizontal layout>
       <paper-tabs selected="0" flex>
-        <paper-tab>LIST OF POST</paper-tab>
+        <paper-tab>MANAGE POST</paper-tab>
       </paper-tabs>
     </div>
   <% } %>
