--- a/app/views/admin_new_post.ejs
+++ b/app/views/admin_new_post.ejs
@@ -5,12 +5,18 @@
 
   <div ng-controller="Admin">
 
-    <div id="contents" style="max-width:780px;margin-left:auto;margin-right:auto;padding:20px;">
+    <div id="contents" style="max-width:780px;margin-left:auto;margin-right:auto;padding:20px;padding-top:40px;">
 
-      <div style="color:#444;border-bottom:1px solid gray;padding:5px;margin-bottom:50px;padding-bottom:50px;">New Post</div>
+      <div style="color:#444;font-size:22px;color:magenta"><core-icon icon="create"></core-icon>New Post</div>
+
+       <paper-button
+        raised class="submit primary" style="margin-top:30px;">
+        SUBMIT
+      </paper-button>
+
+
       <paper-input-decorator 
         label="Title" 
-        floatingLabel 
        
       >
         <input name="username" is="paper-input"
