--- a/public/less/admin.less
+++ b/public/less/admin.less
@@ -3,10 +3,11 @@
 @import 'variables.less';
 
 paper-dropdown {
-  position : absolute!important;
-  top      : 38px!important;
-  right    : 10px!important;
-  min-width: 150px!important;
+  position  : absolute!important;
+  top       : 38px!important;
+  right     : 10px!important;
+  min-width : 180px!important;
+  min-height:120px!important;
 
   paper-item {
 		color    : @primaryText;
