tab 메뉴 클릭시 url이동하도록 추가

--- a/app/views/admin_new_post.ejs
+++ b/app/views/admin_new_post.ejs
@@ -9,10 +9,7 @@
 
       <div style="color:#444;font-size:22px;color:magenta"><core-icon icon="create"></core-icon>New Post</div>
 
-       <paper-button
-        raised class="submit primary" style="margin-top:30px;">
-        SUBMIT
-      </paper-button>
+      
 
 
       <paper-input-decorator 
@@ -29,7 +26,17 @@
       </paper-input-decorator>
 
       
-    <div style="margin-right:auto;margin-left:auto;width:780px;height200px;"><textarea id="editor" style="height:200px;"></textarea></div>
+    <div style="margin-right:auto;margin-left:auto;width:780px;height100px;"><textarea id="editor" style="height:100px;" height="100px"></textarea></div>
+
+     <paper-button
+        raised class="submit primary" style="margin-top:30px;">
+        SUBMIT
+      </paper-button>
+
+       <paper-button
+        raised class="submit" style="margin-top:30px;">
+        CANCEL
+      </paper-button>
 
   </div>
 
