--- a/app/views/admin_new_post.ejs
+++ b/app/views/admin_new_post.ejs
@@ -1,5 +1,11 @@
 <% include header %>
 
+<style>
+.CodeMirror {
+  height:80px;
+}
+</style>
+
 <core-header-panel flex>
   <% include topbar %>
 
@@ -10,6 +16,15 @@
       <div style="color:#444;font-size:22px;color:magenta"><core-icon icon="create"></core-icon>New Post</div>
 
       
+     <paper-button
+        raised class="submit primary" style="margin-top:30px;">
+        SUBMIT
+      </paper-button>
+
+       <paper-button
+        raised class="submit" style="margin-top:30px;">
+        CANCEL
+      </paper-button>
 
 
       <paper-input-decorator 
@@ -25,18 +40,8 @@
         >
       </paper-input-decorator>
 
-      
-    <div style="margin-right:auto;margin-left:auto;width:780px;height100px;"><textarea id="editor" style="height:100px;" height="100px"></textarea></div>
+    <div style="margin-right:auto;margin-left:auto;max-width:780px;padding:10px;margin:0px auto;height:100px;"><textarea id="editor" style="height:100px;" height="100px"></textarea></div>
 
-     <paper-button
-        raised class="submit primary" style="margin-top:30px;">
-        SUBMIT
-      </paper-button>
-
-       <paper-button
-        raised class="submit" style="margin-top:30px;">
-        CANCEL
-      </paper-button>
 
   </div>
 
