--- a/public/less/style.less
+++ b/public/less/style.less
@@ -134,3 +134,11 @@ paper-input-decorator /deep/ .error {
 		width:100%;
 	}
 }
+
+#contents {
+	max-width   :780px;
+	margin-left :auto;
+	margin-right:auto;
+	padding     :20px;
+	padding-top :40px;
+}
