editor 스타일 수정중

--- a/app/views/admin_new_post.ejs
+++ b/app/views/admin_new_post.ejs
@@ -30,19 +30,19 @@
         >
       </paper-input-decorator>
 
-    <div style="margin-right:auto;margin-left:auto;max-width:780px;padding:0px;margin:0px auto;height:100px;"><textarea id="editor" style="height:100px;" height="100px"></textarea></div>
+    <div style="margin-right:auto;margin-left:auto;max-width:780px;padding:0px;margin:0px auto;height:100px;margin-top:20px;"><textarea id="editor" style="height:100px;padding:10px;" height="100px"></textarea></div>
 
-    <div style="margin-top:100px;width:100%;border-top:1px solid black;">
+    <div style="margin-top:80px;">
 
-      <div style="float:right;">
+      <div style="margin-left:auto;margin-right:auto;text-align:center">
 
      <paper-button
-        raised class="submit primary" style="margin-top:20px;">
+        raised class="submit primary" style="margin-top:20px;width:25%;">
         PUBLISH
       </paper-button>
 
        <paper-button
-        raised class="submit" style="margin-top:20px;">
+        raised class="submit" style="margin-top:20px;width:25%">
         CANCEL
       </paper-button>
 
