--- a/public/less/admin_new_post.less
+++ b/public/less/admin_new_post.less
@@ -1,21 +1,43 @@
 // new post page style
 
-@import 'variables.less'; 
+@import 'variables.less';
+
+@editorColor: lighten(@dividerColor, 15%);
+
+.page-title {
+	font-size    : 26px;
+	color        : @accentColor;
+	margin-bottom: 20px;
+	font-weight  : bold;
+}
+
+.editor-wrapper {
+	padding     :0px;
+	margin      :0px auto;
+	margin-top  :20px;
+}
+
+.buttons {
+	margin-top:40px;	
+
+	> div {
+		text-align:center;
+	}
+
+	paper-button[raised] {
+		width: 200px!important;
+	}
+}
 
 /** override editor style **/
- .CodeMirror {
-  border-bottom: 1px solid @primaryColor;
-  border-left  : 1px solid @dividerColor;
-  border-right : 1px solid @dividerColor;
- }
+.CodeMirror {
+	height       : 250px!important;
+	border-bottom: 1px solid @primaryColor;
+	border-left  : 1px solid @editorColor;
+	border-right : 1px solid @editorColor;
+}
 
- .editor-toolbar {
-
- 	&:hover {
- 		background-color: @dividerColor;
- 		opacity: 1!important;
- 	}
-
-  background-color: @dividerColor;
-  opacity: 1!important;
- }
+.editor-toolbar {
+	background-color: @editorColor;
+	opacity         : 1!important;
+}
