editor directive 추가. add post 메서드 추가

--- a/app/views/admin_new_post.ejs
+++ b/app/views/admin_new_post.ejs
@@ -27,13 +27,17 @@
         </paper-input-decorator>
  
         <div class="editor-wrapper">
-          <textarea id="editor"></textarea>
+          <textarea ng-editor id="editor"
+            required
+            ng-model="formData.contents"
+            ng-keydown="hideGlobalValidation()"
+          ></textarea>
         </div>
 
         <div class="buttons">
           <div>
              <paper-button
-                ng-click="submit('/')"
+                ng-click="submit('<%-submitUrl%>')"
                 raised class="primary">
                 PUBLISH
               </paper-button>
