--- a/public/less/style.less
+++ b/public/less/style.less
@@ -103,6 +103,28 @@ paper-input-decorator /deep/ .error {
 	color: @secondaryText!important;
 }
 
+/** form - global validation **/
+paper-shadow.global-validator {
+  display         : inline-block;
+  background-color: @lightPrimaryColor;
+  box-sizing      : border-box;
+  margin-bottom   : 0px;
+  margin-top      : 20px;
+  padding         : 10px;
+  border-radius   : 2px;
+  width           : 100%;
+  color           : @textNicon;
+  font-size       : 13px;
+
+  core-icon {
+    margin-right:5px;
+    font-size   :12px;
+    height      :18px;
+    width       :18px; 
+  }
+} 
+
+
 /** shared element style **/
 
 #mainheader #userinfo {
