포스팅 추가 기능 구현. momentjs 추가

--- a/app/views/admin_new_post.ejs
+++ b/app/views/admin_new_post.ejs
@@ -32,6 +32,16 @@
           ></textarea>
         </div>
 
+        <paper-shadow 
+          class="global-validator" 
+          z="1"
+          ng-cloak
+          ng-show="formData.valid.global"
+        >
+          <core-icon icon="report-problem"></core-icon>
+          {{formData.error.global}}
+        </paper-shadow>
+
         <div class="buttons">
           <div>
              <paper-button
