포스트 list 추가중

--- a/app/views/admin.ejs
+++ b/app/views/admin.ejs
@@ -6,9 +6,19 @@
   <div ng-controller="Admin">
 
     <div id="contents">
-      <div test style="height:800px;" ng-model="zzzzz"></div>
-      <paper-fab id="add-post" icon="add" ng-click="addPost('<%= newPostUrl %>')" class="bottom indent" title="add new post"></paper-fab>
-    </div>
+      <div>
+
+      	<div><h3>Some big long title</h3> <span style="float:right">2015-01-01</span></div>
+
+      	<div><h3>Some big long title</h3> <span style="float:right">2015-01-01</span></div>
+
+      	<div><h3>Some big long title</h3> <span style="float:right">2015-01-01</span></div>
+
+      	<div><h3>Some big long title</h3> <span style="float:right">2015-01-01</span></div>
+
+
+	      <paper-fab id="add-post" icon="add" ng-click="addPost('<%= newPostUrl %>')" class="bottom indent" title="add new post"></paper-fab>
+	    </div>
   
   </div>
 </core-header-panel>
