--- a/app/views/admin.ejs
+++ b/app/views/admin.ejs
@@ -8,13 +8,26 @@
     <div id="contents">
       <div>
 
-      	<div><h3>Some big long title</h3> <span style="float:right">2015-01-01</span></div>
-
-      	<div><h3>Some big long title</h3> <span style="float:right">2015-01-01</span></div>
-
-      	<div><h3>Some big long title</h3> <span style="float:right">2015-01-01</span></div>
-
-      	<div><h3>Some big long title</h3> <span style="float:right">2015-01-01</span></div>
+      	<ul>
+          <li>
+            some long title
+            <div style="float:right">2015-01</div>
+            <div style="float:clear">
+            <div>icon area</div>
+          </li>
+          <li>
+            some long title
+            <div style="float:right">2015-01</div>
+            <div style="float:clear">
+            <div>icon area</div>
+          </li>
+          <li>
+            some long title
+          </li>
+          <li>
+            some long title
+          </li>
+        </ul>
 
 
 	      <paper-fab id="add-post" icon="add" ng-click="addPost('<%= newPostUrl %>')" class="bottom indent" title="add new post"></paper-fab>
