--- a/public/less/admin.less
+++ b/public/less/admin.less
@@ -2,6 +2,13 @@
 
 @import 'variables.less';
 
+.page-title {
+  font-size    : 26px;
+  color        : @accentColor;
+  margin-bottom: 20px;
+  font-weight  : bold;
+}
+
 paper-dropdown {
   position  : absolute!important;
   top       : 38px!important;
