스타일 수정중

--- a/app/views/admin.ejs
+++ b/app/views/admin.ejs
@@ -19,28 +19,7 @@
             border-bottom:1px solid black;
           }
 
-          th {
-            text-align: left;
-            font-size:18px;
-            color: #616161;
-            background-color:#B6B6B6;
-            /*border-bottom: 2px solid #B6B6B6;*/
-            padding-top:10px;
-            padding-bottom:10px;
-          }
-
-
-          tbody td {
-            border-bottom: 1px solid #B6B6B6;
-            padding:10px;
-            padding-left:0px;
-          }
-
-          tbody td {
-            font-size:12px;
-            color: #727272;
-            
-          }
+          
 
         </style>
 
@@ -56,13 +35,13 @@
                 <td></td><td>lolem ipsum doler sit amen</td><td>2015-01-01</td><td></td>
               </tr>
                <tr>
-                <td></td><td>zzzzzzzzzzzzzzzzz</td><td>2015-01-01</td><td></td>
+                <td></td><td>o i do not have an ipod developers developers developers developers </td><td>2015-01-01</td><td></td>
               </tr>
                <tr>
-                <td></td><td>zzzzzzzzzzzzzzzzz</td><td>2015-01-01</td><td></td>
+                <td></td><td>ation developers developers developers developers</td><td>2015-01-01</td><td></td>
               </tr>
                <tr>
-                <td></td><td>zzzzzzzzzzzzzzzzz</td><td>2015-01-01</td><td></td>
+                <td></td><td>innovation open source i have neve</td><td>2015-01-01</td><td></td>
               </tr>
                <tr>
                 <td></td><td>zzzzzzzzzzzzzzzzz</td><td>2015-01-01</td><td></td>
