--- a/public/less/admin_new_post.less
+++ b/public/less/admin_new_post.less
@@ -2,7 +2,7 @@
 
 @import 'variables.less';
 
-@editorColor: lighten(@dividerColor, 15%);
+@editorColor: @dividerLightColor;
 
 .page-title {
 	font-size    : 26px;
