--- a/public/less/admin.less
+++ b/public/less/admin.less
@@ -36,3 +36,36 @@ html /deep/ paper-dropdown::shadow #scroller {
     background-color:@accentColor;
   }
 }
+
+table {
+  border-left:1px solid @dividerLightColor;
+  border-right:1px solid @dividerLightColor;
+  border-bottom:1px solid black;
+  th {
+    text-align: left;
+    font-size:16px;
+    color: @lightPrimaryColor;
+    background-color:@dividerLightColor;
+    /*border-bottom: 2px solid #B6B6B6;*/
+    padding-top:15px;
+    padding-bottom:15px;
+    font-weight:bold;
+  }
+
+
+  tbody td {
+    border-bottom: 1px solid @dividerColor;
+    padding:12px;
+    padding-left:0px;
+  }
+
+  tbody td {
+    font-size:14px;
+    color: @secondaryText;
+    
+  }
+
+  tbody tr:last-child td{
+    border:none;
+  }
+}
