--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -8,3 +8,4 @@
 @primaryText      : #212121;
 @secondaryText    : #727272;
 @dividerColor     : #B6B6B6;
+@dividerLightColor: lighten(@dividerColor, 15%);
