checkbox 더보기 버튼 추가

--- a/app/views/admin.ejs
+++ b/app/views/admin.ejs
@@ -32,22 +32,22 @@
             <thead><tr><th></th><th>Title</th><th>Publish date</th><th></th></tr></thead>
             <tbody>
               <tr>
-                <td></td><td>lolem ipsum doler sit amen</td><td>2015-01-01</td><td></td>
+                <td> <paper-checkbox for></paper-checkbox></td><td>lolem ipsum doler sit amen</td><td>2015-01-01</td><td><paper-icon-button icon="more-vert" title="more"></paper-icon-button></td>
               </tr>
                <tr>
-                <td></td><td>o i do not have an ipod developers developers developers developers </td><td>2015-01-01</td><td></td>
+                <td> <paper-checkbox for></paper-checkbox></td><td>lolem ipsum doler sit amen</td><td>2015-01-01</td><td><paper-icon-button icon="more-vert" title="more"></paper-icon-button></td>
               </tr>
                <tr>
-                <td></td><td>ation developers developers developers developers</td><td>2015-01-01</td><td></td>
+                <td> <paper-checkbox for></paper-checkbox></td><td>lolem ipsum doler sit amen</td><td>2015-01-01</td><td><paper-icon-button icon="more-vert" title="more"></paper-icon-button></td>
               </tr>
                <tr>
-                <td></td><td>innovation open source i have neve</td><td>2015-01-01</td><td></td>
+                <td> <paper-checkbox for></paper-checkbox></td><td>lolem ipsum doler sit amen</td><td>2015-01-01</td><td><paper-icon-button icon="more-vert" title="more"></paper-icon-button></td>
               </tr>
                <tr>
-                <td></td><td>zzzzzzzzzzzzzzzzz</td><td>2015-01-01</td><td></td>
+                <td> <paper-checkbox for></paper-checkbox></td><td>lolem ipsum doler sit amen</td><td>2015-01-01</td><td><paper-icon-button icon="more-vert" title="more"></paper-icon-button></td>
               </tr>
                <tr>
-                <td></td><td>zzzzzzzzzzzzzzzzz</td><td>2015-01-01</td><td></td>
+                <td> <paper-checkbox for></paper-checkbox></td><td>lolem ipsum doler sit amen</td><td>2015-01-01</td><td><paper-icon-button icon="more-vert" title="more"></paper-icon-button></td>
               </tr>
             </tbody>
           </table>
