--- a/public/less/admin.less
+++ b/public/less/admin.less
@@ -49,6 +49,8 @@ table {
     /*border-bottom: 2px solid #B6B6B6;*/
     padding-top:15px;
     padding-bottom:15px;
+    padding-left:12px;
+    padding-right:12px;
     font-weight:bold;
   }
 
@@ -56,7 +58,7 @@ table {
   tbody td {
     border-bottom: 1px solid @dividerColor;
     padding:12px;
-    padding-left:0px;
+    //padding-left:0px;
   }
 
   tbody td {
